--- a/document.bib
+++ b/document.bib
@@ -38,6 +38,23 @@ Masters in Applied Computer Science",
 	url = "http://www.bittorrent.org/bittorrentecon.pdf"
 }
 
+@article{ACohenBAD,
+	title = {Is Peer-to-Peer Inherently Bad?},
+	author = {Adam Cohen},
+	howpublished = "School of Engineering, Washington University",
+	year = "2015",
+	url = "https://sever.wustl.edu/degreeprograms/cyber-security-management/SiteAssets/COHEN%20-%20IS%20P2P%20BAD%20FINAL%20PAPER.pdf"
+}
+
+@article{BitExploit,
+	title = {P2P File-Sharing in Hell: Exploiting BitTorrent Vulnerabilities to Launch Distributed Reflective Dos Attacks},
+	author = {Florian Adamsky 
+	and Syed Ali Khayam
+	and Rudolf Jäger
+	and Muttukrishnan Rajarajan},
+	url = "https://www.usenix.org/system/files/conference/woot15/woot15-paper-adamsky.pdf"
+}
+
 @Article{Zhang2012,
 author="Zhang, GuoQiang
 and Tang, MingDong
